[package]
name = "intervaL_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
smallvec = "1.11.2"
wasm-bindgen = "0.2.88"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1